force-app/main/default/objects/Village__c/Village__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold the details specific to a village such as sales area, standard contract/lease terms, default brand performance targets, signatories etc.</description>
    <label>Village</label>
    <nameField>
        <label>Village Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Villages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>