force-app/main/default/objects/Village__c/fields/Age_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Age_Breakdown__c</fullName>
    <description>Age Breakdown</description>
    <inlineHelpText>Age Breakdown</inlineHelpText>
    <label>Age Breakdown</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>