force-app/main/default/objects/Village__c/fields/Average_Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Average_Disposable_Income__c</fullName>
    <description>Average Disposable Income</description>
    <inlineHelpText>Average Disposable Income of the guests</inlineHelpText>
    <label>Average Disposable Income</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>