force-app/main/default/objects/Village__c/fields/Average_Dwell_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Dwell_Time__c</fullName>
    <description>Average Dwell Time</description>
    <inlineHelpText>Average Dwell Time</inlineHelpText>
    <label>Average Dwell Time</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>