force-app/main/default/objects/Village__c/fields/Average_Visits_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Visits_Per_Year__c</fullName>
    <description>Average Visits Per Year</description>
    <inlineHelpText>Average Visits Per Year</inlineHelpText>
    <label>Average Visits Per Year</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>