force-app/main/default/objects/Village__c/fields/B2B_Chatter_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Chatter_Group_Name__c</fullName>
    <description>Defines the chatter group to post to when an event is created which mentions the village.</description>
    <inlineHelpText>Defines the chatter group to post to when an event is created which mentions the village.</inlineHelpText>
    <label>B2B Chatter Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>