force-app/main/default/objects/Village__c/fields/Brand_Ambassadors__c.field-meta.xml
<CustomField>
    <fullName>Brand_Ambassadors__c</fullName>
    <description>Brand Ambassadors/Endorsements</description>
    <inlineHelpText>Brand Ambassadors/Endorsements</inlineHelpText>
    <label>Brand Ambassadors/Endorsements</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>