force-app/main/default/objects/Village__c/fields/Business_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Business Director responsible for this village</inlineHelpText>
    <label>Business Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages5</relationshipName>
    <type>Lookup</type>
</CustomField>