force-app/main/default/objects/Village__c/fields/CBF__c.field-meta.xml
<CustomField>
    <fullName>CBF__c</fullName>
    <formula>IF( ISPICKVAL( Std_Charge_Basis__c , &quot;Annual&quot;) , 1, IF( ISPICKVAL( Std_Charge_Basis__c , &quot;Quarterly&quot;) , 4, 12) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Charge Basis as a factor for calculations</inlineHelpText>
    <label>CBF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>