force-app/main/default/objects/Village__c/fields/CertS_Brand_Turnover_Cert_Decl_Statement__c.field-meta.xml
<CustomField>
    <fullName>CertS_Brand_Turnover_Cert_Decl_Statement__c</fullName>
    <description>The declaration statement that is displayed on the Sales Certification PDF Report for this village</description>
    <inlineHelpText>The declaration statement that is displayed on the Sales Certification PDF Report for this village</inlineHelpText>
    <label>CertS Brand Turnover Cert Decl Statement</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>