force-app/main/default/objects/Village__c/fields/CertSales_CertPeriod_Cut_Off_Days__c.field-meta.xml
<CustomField>
    <fullName>CertSales_CertPeriod_Cut_Off_Days__c</fullName>
    <inlineHelpText>The number of days from the period end to the deadline for Brand Head Offices to submit the Sales Certification.</inlineHelpText>
    <label>CertSales CertPeriod Cut Off Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>