force-app/main/default/objects/Village__c/fields/CertSales_CertPeriod_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>CertSales_CertPeriod_Open_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>As soon as &apos;CertSales CertPeriod Open Days&apos; days have elapsed (after the Certification Period End), the Certification Batch status should be set to OPEN.</description>
    <inlineHelpText>The number of days from the end of the period where the brand store will be able to enter Daily Sales before the Brand Head Office are able to see the Sales Certification record in the Brand Portal.</inlineHelpText>
    <label>CertSales CertPeriod Open Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>