force-app/main/default/objects/Village__c/fields/CertSales_Report_Sales_Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>CertSales_Report_Sales_Grace_Period_Days__c</fullName>
    <inlineHelpText>The number of days that brand stores have to enter Daily Sales after the period end before the Daily Sales are no longer editable.  (Note - Daily Sales records are also no longer editable by the brand stores after Sales Certification submission)</inlineHelpText>
    <label>CertSales Report Sales Grace Period Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>