force-app/main/default/objects/Village__c/fields/CertSales_Tot_Variance_Max_Percent__c.field-meta.xml
<CustomField>
    <fullName>CertSales_Tot_Variance_Max_Percent__c</fullName>
    <inlineHelpText>The max % variation (+ or -) between the Brand Reported Amount and the Certified Amount that will cause the validation message to display in the Brand Portal.  The user is required to either change the data or to add an overall comment.</inlineHelpText>
    <label>CertSales Tot Variance Max Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>