force-app/main/default/objects/Village__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <description>CRM</description>
    <inlineHelpText>CRM</inlineHelpText>
    <label>CRM</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>