force-app/main/default/objects/Village__c/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <description>Customer Segmentation</description>
    <inlineHelpText>Customer Segmentation</inlineHelpText>
    <label>Customer Segmentation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>