force-app/main/default/objects/Village__c/fields/Daily_Sale_Email_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sale_Email_Reminders__c</fullName>
    <description>Field to indicate whether, by default, brands within the village should be automatically sent Daily Sale reminder emails as required. (Blank value is assumed to mean yes). This value will override any individual village presence value.</description>
    <inlineHelpText>Field to indicate whether, by default, brands within the village should be automatically sent Daily Sale reminder emails as required. (Blank value is assumed to mean yes). This value will override any individual village presence value.</inlineHelpText>
    <label>Daily Sale Email Reminders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>