force-app/main/default/objects/Village__c/fields/Daily_Sales_Message__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Message__c</fullName>
    <description>Message to display on Home tab of Daily Sales brand portal.</description>
    <inlineHelpText>Enter text to display on Home tab of Daily Sales brand portal.</inlineHelpText>
    <label>Daily Sales Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>