force-app/main/default/objects/Village__c/fields/Default_Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default business analyst for this village</inlineHelpText>
    <label>Business Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages2</relationshipName>
    <type>Lookup</type>
</CustomField>