force-app/main/default/objects/Village__c/fields/Default_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Contract_Type__c</fullName>
    <inlineHelpText>Select the default contract type when creating new contracts</inlineHelpText>
    <label>Default Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>