force-app/main/default/objects/Village__c/fields/Default_Daily_Sales_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Daily_Sales_Record_Type__c</fullName>
    <description>Select the default Daily Sales record type</description>
    <inlineHelpText>Select the default Daily Sales record type</inlineHelpText>
    <label>Default Daily Sales Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Daily_Sale_Record_Types</valueSetName>
    </valueSet>
</CustomField>