force-app/main/default/objects/Village__c/fields/Default_Leasing_Approver__c.field-meta.xml
<CustomField>
    <fullName>Default_Leasing_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default leasing facilitator if one is appointed for this village</inlineHelpText>
    <label>Leasing Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages4</relationshipName>
    <type>Lookup</type>
</CustomField>