force-app/main/default/objects/Village__c/fields/Default_Leasing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Default_Leasing_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default leasing coordinator for this village</inlineHelpText>
    <label>Leasing Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages3</relationshipName>
    <type>Lookup</type>
</CustomField>