force-app/main/default/objects/Village__c/fields/Distance_Metric__c.field-meta.xml
<CustomField>
    <fullName>Distance_Metric__c</fullName>
    <inlineHelpText>Select the metric used to qualify distances</inlineHelpText>
    <label>Distance Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilometres</fullName>
                <default>true</default>
                <label>Kilometres</label>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>