force-app/main/default/objects/Village__c/fields/Evidence_of_VR_Support__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_VR_Support__c</fullName>
    <description>Evidence of VR Support leading to higher conversion</description>
    <inlineHelpText>Evidence of VR Support leading to higher conversion</inlineHelpText>
    <label>Evidence of VR Support</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>