force-app/main/default/objects/Village__c/fields/Expert_Ambassador_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Expert_Ambassador_Quotes__c</fullName>
    <description>Expert Ambassador Quotes</description>
    <inlineHelpText>Expert Ambassador Quotes</inlineHelpText>
    <label>Expert Ambassador Quotes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>