force-app/main/default/objects/Village__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the final approver for leases in this village</inlineHelpText>
    <label>Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages</relationshipName>
    <type>Lookup</type>
</CustomField>