force-app/main/default/objects/Village__c/fields/FX_Rate_to_Group_CCY__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_to_Group_CCY__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Enter the FX rate to be used for reporting and rating calculations</inlineHelpText>
    <label>FX Rate to Group CCY</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>