force-app/main/default/objects/Village__c/fields/GEA_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>GEA_sq_ft__c</fullName>
    <formula>Total_GEA__c * 10.7639</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Village GEA expressed in square feet @ 10.7639 sqft to the sqm</inlineHelpText>
    <label>GEA sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>