force-app/main/default/objects/Village__c/fields/Gender_Split__c.field-meta.xml
<CustomField>
    <fullName>Gender_Split__c</fullName>
    <description>Gender Split</description>
    <inlineHelpText>Gender Split</inlineHelpText>
    <label>Gender Split</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>