force-app/main/default/objects/Village__c/fields/GIA_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>GIA_sq_ft__c</fullName>
    <formula>Total_GIA__c * 10.7639</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Internal Area expressed in square feet</inlineHelpText>
    <label>GIA sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>