force-app/main/default/objects/Village__c/fields/Group_Currency__c.field-meta.xml
<CustomField>
    <fullName>Group_Currency__c</fullName>
    <inlineHelpText>Select the currency this Village uses for group reporting</inlineHelpText>
    <label>Group Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>RMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>