force-app/main/default/objects/Village__c/fields/Group_Leasing_Approver__c.field-meta.xml
<CustomField>
    <fullName>Group_Leasing_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the group leasing approver for this village</inlineHelpText>
    <label>Group Leasing Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages8</relationshipName>
    <type>Lookup</type>
</CustomField>