force-app/main/default/objects/Village__c/fields/Group_Legal_Approver__c.field-meta.xml
<CustomField>
    <fullName>Group_Legal_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default group legal approver for this village</inlineHelpText>
    <label>Group Legal Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages7</relationshipName>
    <type>Lookup</type>
</CustomField>