force-app/main/default/objects/Village__c/fields/HFS_Country_of_Village__c.field-meta.xml
<CustomField>
    <fullName>HFS_Country_of_Village__c</fullName>
    <label>Country of Village</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>