force-app/main/default/objects/Village__c/fields/HFS_High_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HFS_High_Spend_Threshold__c</fullName>
    <description>Field used to stablish what a High spent amount by the guest is</description>
    <label>Local Guest High Spend Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>