force-app/main/default/objects/Village__c/fields/HFS_International_Guest_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HFS_International_Guest_Spend_Threshold__c</fullName>
    <description>International threshold to determine when the spend amount  reaches a gift/treat level</description>
    <label>International Guest Spend Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>