force-app/main/default/objects/Village__c/fields/HFS_Medium_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HFS_Medium_Spend_Threshold__c</fullName>
    <description>Indicates what a medium spent is for the village in the context of the HFS Project</description>
    <label>Local Guest Medium Spend Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>