force-app/main/default/objects/Village__c/fields/Integration_Language_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Language_Name__c</fullName>
    <description>Default language for the village used by integration layer when language has not been specified on guest creation</description>
    <inlineHelpText>Default language for the village used by integration layer when language has not been specified on guest creation</inlineHelpText>
    <label>Integration Language Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>