force-app/main/default/objects/Village__c/fields/Integration_Village_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Village_Name__c</fullName>
    <description>Name used by Microservice API&apos;s to identify village.</description>
    <inlineHelpText>Name used by Microservice API&apos;s to identify village.</inlineHelpText>
    <label>Integration Village Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>