force-app/main/default/objects/Village__c/fields/Introduction_to_Full_Price__c.field-meta.xml
<CustomField>
    <fullName>Introduction_to_Full_Price__c</fullName>
    <description>Introduction to Full Price</description>
    <inlineHelpText>Introduction to Full Price</inlineHelpText>
    <label>Introduction to Full Price</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>