force-app/main/default/objects/Village__c/fields/Key_Soundbites_from_Third_Party_Studies__c.field-meta.xml
<CustomField>
    <fullName>Key_Soundbites_from_Third_Party_Studies__c</fullName>
    <description>Key Soundbites from Third Party Studies</description>
    <inlineHelpText>Key Soundbites from Third Party Studies</inlineHelpText>
    <label>Key Soundbites from Third Party Studies</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>