force-app/main/default/objects/Village__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <inlineHelpText>Enter the name and address of the legal entity who will be the default landlord for all leases in the village</inlineHelpText>
    <label>Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>