force-app/main/default/objects/Village__c/fields/Legal_Approver__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Legal Approver responsible for this village</inlineHelpText>
    <label>Legal Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages6</relationshipName>
    <type>Lookup</type>
</CustomField>