force-app/main/default/objects/Village__c/fields/Long_Haul_vs_Short_Haul__c.field-meta.xml
<CustomField>
    <fullName>Long_Haul_vs_Short_Haul__c</fullName>
    <description>Long Haul vs Short Haul</description>
    <inlineHelpText>Long Haul vs Short Haul</inlineHelpText>
    <label>Long Haul vs Short Haul</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>