force-app/main/default/objects/Village__c/fields/Millennial_Guest__c.field-meta.xml
<CustomField>
    <fullName>Millennial_Guest__c</fullName>
    <description>Millennial Guest</description>
    <inlineHelpText>Millennial Guest</inlineHelpText>
    <label>Millennial Guest</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>