force-app/main/default/objects/Village__c/fields/Minimum_Acceptable_ToR__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Acceptable_ToR__c</fullName>
    <defaultValue>0.12</defaultValue>
    <inlineHelpText>Enter the minimum royalty return acceptable for the village</inlineHelpText>
    <label>Minimum Acceptable ToR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>