force-app/main/default/objects/Village__c/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <description>Mode of Transport</description>
    <inlineHelpText>Mode of Transport</inlineHelpText>
    <label>Mode of Transport</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>