force-app/main/default/objects/Village__c/fields/Non_Compete_Map__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Map__c</fullName>
    <label>Non Compete Map ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>