force-app/main/default/objects/Village__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <inlineHelpText>A Count of Units registered against the Village (that are not Omitted)</inlineHelpText>
    <label>Number of Units</label>
    <summaryFilterItems>
        <field>Unit__c.Omit_from_Village_GEA__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Village__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>