force-app/main/default/objects/Village__c/fields/Oracle_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Organisation__c</fullName>
    <description>The business unit within oracle</description>
    <inlineHelpText>The business unit within oracle</inlineHelpText>
    <label>Oracle Organisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>