force-app/main/default/objects/Village__c/fields/Oracle_Source_Template_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Source_Template_Number__c</fullName>
    <description>The value used to map to an oracle template when sent to Oracle Fusion</description>
    <inlineHelpText>The value used to map to an oracle template when sent to Oracle Fusion</inlineHelpText>
    <label>Oracle Source Template Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>