force-app/main/default/objects/Village__c/fields/Origin_By_Nationality_Split__c.field-meta.xml
<CustomField>
    <fullName>Origin_By_Nationality_Split__c</fullName>
    <description>percentage of guests by nationality</description>
    <inlineHelpText>percentage of guests by nationality</inlineHelpText>
    <label>Origin By Nationality Split %</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>