force-app/main/default/objects/Village__c/fields/Other_Data__c.field-meta.xml
<CustomField>
    <fullName>Other_Data__c</fullName>
    <description>Other Data</description>
    <inlineHelpText>Other Data</inlineHelpText>
    <label>Other Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>