force-app/main/default/objects/Village__c/fields/Potential_of_Location__c.field-meta.xml
<CustomField>
    <fullName>Potential_of_Location__c</fullName>
    <description>Potential of Location</description>
    <inlineHelpText>Potential of Location</inlineHelpText>
    <label>Potential of Location</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>