force-app/main/default/objects/Village__c/fields/President__c.field-meta.xml
<CustomField>
    <fullName>President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the President</inlineHelpText>
    <label>President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Villages1</relationshipName>
    <type>Lookup</type>
</CustomField>