force-app/main/default/objects/Village__c/fields/Previous_Year_CPI__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_CPI__c</fullName>
    <inlineHelpText>Enter the Consumer Price Index (CPI) for the previous year when known</inlineHelpText>
    <label>Previous Year CPI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>