force-app/main/default/objects/Village__c/fields/Projected_Annual_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Projected_Annual_Sales_Uplift__c</fullName>
    <defaultValue>0.10</defaultValue>
    <inlineHelpText>Enter the projected annual uplift in sales revenue used for calculating brand sales projections</inlineHelpText>
    <label>Projected Annual Sales Uplift</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>