force-app/main/default/objects/Village__c/fields/Region_1__c.field-meta.xml
<CustomField>
    <fullName>Region_1__c</fullName>
    <inlineHelpText>Enter the region that best defines the location of the village</inlineHelpText>
    <label>Region 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>UK &amp; Ireland</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Other EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>