force-app/main/default/objects/Village__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the region where this village is situated</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Villages</relationshipLabel>
    <relationshipName>Villages</relationshipName>
    <type>Lookup</type>
</CustomField>