force-app/main/default/objects/Village__c/fields/Retail_Live_Execs__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live_Execs__c</fullName>
    <description>Comma separated list of email addresses which will populate the cc section of all outgoing Retail Live communications initiated from Village.</description>
    <inlineHelpText>Comma separated list of email addresses which will populate the cc section of all outgoing Retail Live communications initiated from Village.</inlineHelpText>
    <label>Retail Live Execs</label>
    <type>TextArea</type>
</CustomField>