force-app/main/default/objects/Village__c/fields/SF__c.field-meta.xml
<CustomField>
    <fullName>SF__c</fullName>
    <formula>IF( ISPICKVAL( Village_Size_Metric__c , &quot;Sq.ft&quot;) , 10.7639, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Space conversion factor</inlineHelpText>
    <label>SF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>