force-app/main/default/objects/Village__c/fields/Std_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Std_Base_Rent__c</fullName>
    <inlineHelpText>Enter the standard base rent per square metre to be offered on leases in this village</inlineHelpText>
    <label>Std Base Rent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>