force-app/main/default/objects/Village__c/fields/Std_Base_Rent_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Base_Rent_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Base Rent Clause</inlineHelpText>
    <label>Std Base Rent Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>