force-app/main/default/objects/Village__c/fields/Std_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Std_Billing_Frequency__c</fullName>
    <inlineHelpText>Select the standard billing frequency for leases in this village, A - Annual; Q - Quarterly; M - Monthly</inlineHelpText>
    <label>Std Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>