force-app/main/default/objects/Village__c/fields/Std_Break_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Break_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Landlords Break Clause</inlineHelpText>
    <label>Std Break Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>