force-app/main/default/objects/Village__c/fields/Std_Charge_Basis__c.field-meta.xml
<CustomField>
    <fullName>Std_Charge_Basis__c</fullName>
    <inlineHelpText>Select the standard charge basis for quoting Base Rent and Service Charges, A - Annual; Q - Quarterley; M - Monthly</inlineHelpText>
    <label>Std Charge Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>