force-app/main/default/objects/Village__c/fields/Std_Cost_of_Capital__c.field-meta.xml
<CustomField>
    <fullName>Std_Cost_of_Capital__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the cost of capital percentage to be used in BCAP Terms Analysis calculations for leases in this village</inlineHelpText>
    <label>Std Cost of Capital</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>