force-app/main/default/objects/Village__c/fields/Std_Deposit_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Deposit_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Deposit Clause</inlineHelpText>
    <label>Std Deposit Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>