force-app/main/default/objects/Village__c/fields/Std_Deposit_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Std_Deposit_Period_months__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>Enter the standard security deposit period in months for leases in this village</inlineHelpText>
    <label>Std Deposit Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>