force-app/main/default/objects/Village__c/fields/Std_Fit_Out_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Fit_Out_Clause__c</fullName>
    <inlineHelpText>Enter or amend the standard fit out clause for this village</inlineHelpText>
    <label>Std Fit Out Clause</label>
    <length>1048</length>
    <type>LongTextArea</type>
</CustomField>