force-app/main/default/objects/Village__c/fields/Std_Fit_Out_days__c.field-meta.xml
<CustomField>
    <fullName>Std_Fit_Out_days__c</fullName>
    <inlineHelpText>Enter the standard fitting out period in days to be used in this village</inlineHelpText>
    <label>Std Fit Out (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>